--- a/notebooks/inria-maskrcnn.ipynb
+++ b/notebooks/inria-maskrcnn.ipynb
@@ -47,9 +47,9 @@
     "TRAIN_PATH = '../data/train/images'\n",
     "GT_PATH = '../data/train/gt/'\n",
     "MASK_PREVIEW_PATH = '../data/train/mask_preview/'\n",
-    "TF_RESEARCH_PATH = '/usr/local/google/home/wwoo/github/tensorflow/models/research'\n",
+    "TF_RESEARCH_PATH = '/home/wwoo/github/tensorflow/models/research'\n",
     "MODEL_CONFIG = 'mask_rcnn_inception_v2_coco.416x416.config'\n",
-    "YOUR_GCS_BUCKET = 'wwoo-sunroof'\n",
+    "YOUR_GCS_BUCKET = 'wwoo-test'\n",
     "PRETRAINED_MODEL_URL = 'http://download.tensorflow.org/models/object_detection/mask_rcnn_inception_v2_coco_2018_01_28.tar.gz'\n",
     "JOB_POSTFIX = '416x416'\n",
     "\n",
@@ -1067,7 +1067,7 @@
     "%%bash\n",
     "\n",
     "## MODIFY THE FOLLOWING\n",
-    "LOG_DIR=gs://wwoo-sunroof/mask_rcnn_resnet101_atrous_coco_1000x1000_416x416/model/\n",
+    "LOG_DIR=gs://wwoo-test/mask_rcnn_resnet101_atrous_coco_1000x1000_416x416/model/\n",
     "## END MODIFICATIONS\n",
     "\n",
     "tensorboard --logdir ${LOG_DIR}"
@@ -1625,7 +1625,7 @@
     "param_list = [('__TF_RESEARCH_PATH__', TF_RESEARCH_PATH),\n",
     "              ('__INPUT_TYPE__', 'image_tensor'),\n",
     "              ('__MODEL_CONFIG__', MODEL_CONFIG),\n",
-    "              ('__TRAINED_CHECKPOINT_PREFIX__', 'gs://wwoo-sunroof/mask_rcnn_inception_v2_coco_2018_01_28_416x416/model/model.ckpt-201524')]\n",
+    "              ('__TRAINED_CHECKPOINT_PREFIX__', 'gs://wwoo-test/mask_rcnn_inception_v2_coco_2018_01_28_416x416/model/model.ckpt-201524')]\n",
     "\n",
     "export_script = replace_in_script(export_script, param_list)\n",
     "!{export_script}"
