--- a/notebooks/inria-maskrcnn.ipynb
+++ b/notebooks/inria-maskrcnn.ipynb
@@ -72,12 +72,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def replace_in_script(config_str, param_list=None):\n",
-    "    if param_list is not None:\n",
-    "        for param in param_list:\n",
-    "            placeholder, value = param\n",
-    "            config_str = config_str.replace(placeholder, value)\n",
-    "    return config_str"
+    "os.environ['YOUR_GCS_BUCKET'] = YOUR_GCS_BUCKET\n",
+    "os.environ['TF_RESEARCH_PATH'] = TF_RESEARCH_PATH\n",
+    "os.environ['PRETRAINED_MODEL_URL'] = PRETRAINED_MODEL_URL\n",
+    "os.environ['MODEL_CONFIG'] = MODEL_CONFIG\n",
+    "os.environ['JOB_POSTFIX'] = JOB_POSTFIX"
    ]
   },
   {
@@ -961,13 +960,6 @@
     }
    ],
    "source": [
-    "train_script = '''\n",
-    "YOUR_GCS_BUCKET=__YOUR_GCS_BUCKET__\n",
-    "TF_RESEARCH_PATH=__TF_RESEARCH_PATH__\n",
-    "PRETRAINED_MODEL_URL=__PRETRAINED_MODEL_URL__\n",
-    "MODEL_CONFIG=__MODEL_CONFIG__\n",
-    "JOB_POSTFIX=__JOB_POSTFIX__\n",
-    "\n",
     "TAR_FILE=`echo \"${PRETRAINED_MODEL_URL##*/}\"`\n",
     "UNTAR_DIR=\"${TAR_FILE%.tar.gz}\"\n",
     "NOTEBOOK_DIR=`pwd`\n",
@@ -1038,17 +1030,7 @@
     "    -- \\\n",
     "    --model_dir=gs://${YOUR_GCS_BUCKET}/${UNTAR_DIR}_${JOB_POSTFIX}/model/ \\\n",
     "    --pipeline_config_path=gs://${YOUR_GCS_BUCKET}/${UNTAR_DIR}_${JOB_POSTFIX}/checkpoint/${MODEL_CONFIG}\n",
-    "echo \"======================================================\"\n",
-    "'''\n",
-    "\n",
-    "param_list = [('__YOUR_GCS_BUCKET__', YOUR_GCS_BUCKET),\n",
-    "              ('__TF_RESEARCH_PATH__', TF_RESEARCH_PATH),\n",
-    "              ('__PRETRAINED_MODEL_URL__', PRETRAINED_MODEL_URL),\n",
-    "              ('__MODEL_CONFIG__', MODEL_CONFIG),\n",
-    "              ('__JOB_POSTFIX__', JOB_POSTFIX)]\n",
-    "\n",
-    "train_script = replace_in_script(train_script, param_list)\n",
-    "!{train_script}"
+    "echo \"======================================================\""
    ]
   },
   {
@@ -1610,25 +1592,16 @@
     }
    ],
    "source": [
-    "export_script = '''\n",
+    "%%bash\n",
     "NOTEBOOK_DIR=`pwd`\n",
     "mkdir -p ${NOTEBOOK_DIR}/../exported_model\n",
-    "cp __MODEL_CONFIG__ __TF_RESEARCH_PATH__\n",
+    "cp ${MODEL_CONFIG} ${TF_RESEARCH_PATH}\n",
     "cd __TF_RESEARCH_PATH__\n",
-    "PYTHONPATH=__TF_RESEARCH_PATH__:__TF_RESEARCH_PATH__/slim/ python object_detection/export_inference_graph.py \\\n",
-    "    --input_type=__INPUT_TYPE__ \\\n",
-    "    --pipeline_config_path=__MODEL_CONFIG__ \\\n",
-    "    --trained_checkpoint_prefix=__TRAINED_CHECKPOINT_PREFIX__ \\\n",
-    "    --output_directory=${NOTEBOOK_DIR}/../exported_model\n",
-    "'''\n",
-    "\n",
-    "param_list = [('__TF_RESEARCH_PATH__', TF_RESEARCH_PATH),\n",
-    "              ('__INPUT_TYPE__', 'image_tensor'),\n",
-    "              ('__MODEL_CONFIG__', MODEL_CONFIG),\n",
-    "              ('__TRAINED_CHECKPOINT_PREFIX__', 'gs://wwoo-test/mask_rcnn_inception_v2_coco_2018_01_28_416x416/model/model.ckpt-201524')]\n",
-    "\n",
-    "export_script = replace_in_script(export_script, param_list)\n",
-    "!{export_script}"
+    "PYTHONPATH=${TF_RESEARCH_PATH}:${TF_RESEARCH_PATH}/slim/ python object_detection/export_inference_graph.py \\\n",
+    "    --input_type='image_tensor' \\\n",
+    "    --pipeline_config_path=${MODEL_CONFIG} \\\n",
+    "    --trained_checkpoint_prefix='gs://wwoo-test/mask_rcnn_inception_v2_coco_2018_01_28_416x416/model/model.ckpt-201524' \\\n",
+    "    --output_directory=${NOTEBOOK_DIR}/../exported_model"
    ]
   },
   {
