--- a/notebooks/inria-maskrcnn.ipynb
+++ b/notebooks/inria-maskrcnn.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,7 @@
     "PRETRAINED_MODEL_URL = 'http://download.tensorflow.org/models/object_detection/mask_rcnn_inception_v2_coco_2018_01_28.tar.gz'\n",
     "JOB_POSTFIX = '416x416'\n",
     "\n",
+    "# Make sure you create these directories first\n",
     "TRAIN_TILED_PATH = os.path.join(TRAIN_PATH, '../tiled_images_416')\n",
     "GT_TILED_PATH = os.path.join(GT_PATH, '../tiled_gt_416')\n",
     "\n",
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [],
    "source": [
