--- a/notebooks/inria-maskrcnn.ipynb
+++ b/notebooks/inria-maskrcnn.ipynb
@@ -961,6 +961,7 @@
     }
    ],
    "source": [
+    "%%bash\n",
     "TAR_FILE=`echo \"${PRETRAINED_MODEL_URL##*/}\"`\n",
     "UNTAR_DIR=\"${TAR_FILE%.tar.gz}\"\n",
     "NOTEBOOK_DIR=`pwd`\n",
